--- a/training/export_dataset.ipynb
+++ b/training/export_dataset.ipynb
@@ -6,7 +6,6 @@
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": true
     }
    },
@@ -67,7 +66,7 @@
     "# export to db\n",
     "import sqlite3\n",
     "\n",
-    "db_dir = \"/home/daniel/data/uni/masterarbeit-sentiment/data/datasets/experiments/de/3sentiment\"\n",
+    "db_dir = \"/home/daniel/data/uni/masterarbeit-sentiment/data/datasets/experiments/de/3sentiment-exact\"\n",
     "db_file = f\"{db_dir}/datasets.db\"\n",
     "\n",
     "con = sqlite3.connect(db_file)\n",
@@ -75,10 +74,7 @@
     "con.close()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
